--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,6 +5,8 @@ ENV LC_ALL=C.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 
+RUN gem update --system 3.4.22
+
 WORKDIR /usr/src/app
 
 COPY Gemfile jekyll-text-theme.gemspec ./
